--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!-- Mermaid container -->
     <div class="mermaid">
         graph TD;
-        A[Superior Doctor (Shàng gōng, 上工)] -->|Focuses on Prevention| B[Prevents Disease];
-        A -->|90% Success Rate| C[Success Rate (90%)];
-        A -->|Knows Disease Transmission| D[Disease Transmission Knowledge];
+        A["Superior Doctor (Shàng gōng, 上工)"] -->|Focuses on Prevention| B["Prevents Disease"];
+        A -->|90% Success Rate| C["Success Rate (90%)"];
+        A -->|Knows Disease Transmission| D["Disease Transmission Knowledge"];
 
-        E[Mediocre Doctor (Zhōng gōng, 中工)] -->|Reactive Treatment| F[Treats Manifested Diseases];
-        E -->|70% Success Rate| G[Success Rate (70%)];
+        E["Mediocre Doctor (Zhōng gōng, 中工)"] -->|Reactive Treatment| F["Treats Manifested Diseases"];
+        E -->|70% Success Rate| G["Success Rate (70%)"];
 
-        H[Inferior Doctor (Xià gōng, 下工)] -->|Symptomatic Treatment| I[Treats Symptoms];
-        H -->|60% Success Rate| J[Success Rate (60%)];
-        H -->|Basic Understanding| K[Symptom Treatment];
+        H["Inferior Doctor (Xià gōng, 下工)"] -->|Symptomatic Treatment| I["Treats Symptoms"];
+        H -->|60% Success Rate| J["Success Rate (60%)"];
+        H -->|Basic Understanding| K["Symptom Treatment"];
     </div>
 </body>
 </html>
